--- a/justclick2/package.json
+++ b/justclick2/package.json
@@ -8,6 +8,8 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "dayjs": "^1.11.13",
+    "emailjs-com": "^3.2.0",
     "leaflet": "^1.9.4",
     "react": "^19.0.0",
     "react-calendar": "^5.1.0",
