--- a/justclick2/package.json
+++ b/justclick2/package.json
@@ -11,6 +11,7 @@
     "dayjs": "^1.11.13",
     "emailjs-com": "^3.2.0",
     "leaflet": "^1.9.4",
+    "nodemailer": "^7.0.3",
     "react": "^19.0.0",
     "react-calendar": "^5.1.0",
     "react-dom": "^19.0.0",
