--- a/justclick2/package.json
+++ b/justclick2/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "dayjs": "^1.11.13",
     "emailjs-com": "^3.2.0",
+    "firebase": "^11.8.1",
     "leaflet": "^1.9.4",
     "nodemailer": "^7.0.3",
     "react": "^19.0.0",
